--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,23 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  print-hello:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run:
+        name: "Hello again"
+        command: "echo Hello Again"
+
+  print-world:
+    docker:
+      - image: circleci/node:13.8.0
+    requires:
+      - print-hello
+    steps:
+      - run:
+        name: "World"
+        command: "echo World"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +41,5 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      - print-hello
+      - print-world
