--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,22 @@ jobs:
           command: echo "Hello Error!"
           when: on_fail
 
+  get_ec2_instances_to_inventory:
+    docker:
+      - image:  circleci/node:13.8.0
+    steps:
+      - run: echo "[all]" > inventory.txt
+      - run:
+          name: "Save instances to inventory.txt"
+          command: aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:Project,Values=Udacity" \
+            --output text >> inventory.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - inventory.txt
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -80,4 +96,4 @@ workflows:
       - print_output_file:
           requires:
               - save_hello_world_output
-      - fail_build
+      - get_ec2_instances_to_inventory
